--- a/index.css
+++ b/index.css
@@ -17,8 +17,13 @@
 }
 hr {
   margin: calc(3% + 13px) 0;
-  width: 92%;
+  width: 100%;
   border: 1px solid var(--Off-white);
+}
+@media (min-width: 768px) {
+  hr {
+    width: 92%;
+  }
 }
 body {
   font-family: var(--text-font);
@@ -34,7 +39,7 @@ body {
 .icon-arrow {
   width: 30px;
   height: 30px;
-  font-weight: bold;
+  font-weight: 900;
 }
 .container {
   border-radius: 10px;
@@ -51,12 +56,13 @@ body {
 }
 .form {
   display: flex;
-  gap: 20px;
+  gap: 10px;
   position: relative;
   margin-bottom: 50px;
 }
 @media (min-width: 768px) {
   .form {
+    gap: 20px;
     width: 80%;
     margin-bottom: 6%;
   }
@@ -105,7 +111,7 @@ label {
   width: 60px;
   border-radius: 50%;
   position: absolute;
-  left: 43%;
+  left: 40%;
   top: 130%;
   border: none;
   font-size: 20px;
@@ -130,9 +136,14 @@ label {
 }
 .text_error {
   color: var(--light-red);
-  font-size: 10px;
+  font-size: 9px;
   font-weight: 100;
   font-style: normal;
+}
+@media (min-width: 768px) {
+  .text_error {
+    font-size: 10px;
+  }
 }
 .resultado {
   margin-top: 50px;
