--- a/index.css
+++ b/index.css
@@ -16,15 +16,9 @@
   box-sizing: border-box;
 }
 hr {
-  margin: calc(3% + 13px) 0;
-  width: 100%;
   border: 1px solid var(--Off-white);
 }
-@media (min-width: 768px) {
-  hr {
-    width: 92%;
-  }
-}
+
 body {
   font-family: var(--text-font);
   font-weight: 800;
@@ -45,24 +39,29 @@ body {
   border-radius: 10px;
   border-bottom-right-radius: 120px;
   width: 90%;
+  max-width: 550px;
   padding-block: 40px;
   padding-inline: 40px;
   background-color: var(--White);
 }
-@media (min-width: 768px) {
-  .container {
-    width: 550px;
-  }
-}
+
 .form {
+  width: 100%;
+}
+
+.grapper__inputs {
+  width: 100%;
   display: flex;
   gap: 10px;
-  position: relative;
   margin-bottom: 50px;
 }
+.grapper__arrow {
+  margin: calc(3% + 13px) 0;
+  width: 100%;
+  position: relative;
+}
 @media (min-width: 768px) {
-  .form {
-    gap: 20px;
+  .grapper__inputs {
     width: 80%;
     margin-bottom: 6%;
   }
@@ -112,7 +111,7 @@ label {
   border-radius: 50%;
   position: absolute;
   left: 40%;
-  top: 130%;
+  top: -27px;
   border: none;
   font-size: 20px;
   background-color: var(--purple);
@@ -120,15 +119,10 @@ label {
   cursor: pointer;
   transition: background-color 0.5s ease-in-out;
 }
+
 @media (min-width: 768px) {
   .form_button {
-    left: 50%;
-    top: calc(83% + 13px);
-  }
-}
-@media (min-width: 768px) {
-  .form_button {
-    left: 105%;
+    left: 89%;
   }
 }
 .form_button:hover {
